style.css
/* ... */
/* about */
.about{
    position: relative;
    margin-top: 10%;
    margin-bottom: 0%;
    background-image: url(grain.png);
}
.about-text{
    font-family: 'Work Sans', sans-serif;
    font-weight: 400;
    font-size: 22px;
    color:#244589;
    padding-block: 2%;
    float: left;
}

.bowl-noodles{
    position: relative;
    right: -32%;
}

.tomatoes{
    position: relative;
    left: -33%;
}

.olives{
    position: relative;
    top: -30%;
    right: -49%;
}


/* hall of fame */
#fame{
    margin-top: 10vh;
}
.beach-chair{
    position: relative;
    top: 0;
    margin-top: -21%;
    margin-right: 0;
    padding: 0;
}

.title{
    position: relative;
    margin-left: 10vw;
    top: 25%;
}

.hall-of-fame-title{
    width: 75%;
    padding: 0% 5%;
}

/* past-events */
.lettuce{
    margin-left: 1.5%;
    z-index: 0;
    position: relative;
}

.moon{
    margin-left: 0%;
    z-index: 0;
    margin-top: 10%;
    position:absolute;
    text-align: left;
}

.backup-lettuce{
    display: none;
}

/* tas
#past-events {
    margin-top: 10vh;
}
*/

.past-events{
    position: relative;
    margin-top: -90%;
    margin-inline: 15%;
    margin-bottom: 0%;
}

.past-events h4{
    font-family: "Work Sans";
    color: #FFFFFF;
    font-weight: 600;
    font-size: large;
}

.past-events h5{
    font-family: "Poppins";
    color: #F08F65;
    font-weight: 300;
}

/* *********************** projects **************************** */

#projects {
    margin-top: 0%;
}
.project-card{
    background-image: url("images/projects/board.png");
    background-size:     contain;                    
    background-repeat:   no-repeat;
    background-position: center center;
    border-radius: 30px;
}

#projects-mobile{
    display: none;
}

#projects-mobile .slick-slide{
    height: 75vh;
}

#projects-mobile .slick-prev:before, #projects-mobile .slick-next:before{
    color: #244589;
    opacity: 1;
    font-size: 30px;
}

#projects .slick-slide{
    height: 630px;
}

#projects .slick-prev:before, #projects .slick-next:before{
    color: #244589;
    opacity: 1;
    font-size: 30px;
}

.project-image{
    background-image: url('images/projects/bridge-it.png'); 
    background-size: contain; 
    background-position: center center;
    background-repeat: no-repeat;
}

/*Sponsors*/
.diamond{
    position: relative;
    top: 0;
    left: -28%;
    top: 2%; 
}

.why-sponsor{
    position: relative;
    margin-top: 10%;
}
.why-sponsor-title{
    position: relative;
}

.why-sponsor-text{
        font-family: "Poppins";
        font-weight: 400;
        font-size: x-large;
        color:#244589;
        margin-left: 2%;
}

/**WIT**/
.wits{
    margin-top: -150%;
    z-index: 2;
    position: relative;
}
.wits-title{
    width: 25%;
}

.team-text{
    color:#496973;
}

.t-left{
    margin-right: -18%;
}

/* hacker olympics */
.ho-title{
    width: 50%;
}
.goal-title{
    width: 30%
}

@media(max-width:1600px){
    .wits{
        margin-top: -120%;
    }
}

@media(max-width:1300px){
    .wits{
        margin-top: -100%;
    }
}

@media (max-width:991px){
    .wits{
        margin-top: -110%;
    }
     .reverse-col{
        flex-direction:column-reverse;
        padding:5%;
    }

    .burger-image{
        top: 15%;
        max-width: 100%;
        z-index:100;
        position: relative;
        left: 2em;
    }

    .past-events{
        position: relative;
        margin-top: -90%;
        margin-inline: 15%;
    }
    
    .past-events h4{
        font-family: "Work Sans";
        color: #FFFFFF;
        font-weight: 600;
        font-size: smaller;
    }
    
    .past-events h5{
        font-family: "Poppins";
        color: #F08F65;
        font-weight: 300;
        font-size: smaller;
    }
}

.CTA-button{
    background-color: white;
    color: #244589;
    border-radius: 50px;
    text-align: center;
    border: none;
    padding: 18px 25px;
    font-size: large;
    font-family: 'migraextrabold', serif;
}

.btn_img:hover{
    opacity: 0.5;
    transition: all 0.3s ease 0s;
}
.left-align{
    justify-content:left; 
    align-items: left; 
    display: flex;
    font-family: serif;
}

.CTA-button:hover{
    opacity: 0.5;
    transition: all 0.3s ease 0s;
}

.social-icon{
    color: #244589;
    font-size: 3em;
    text-decoration:none;
}
.social-icon:hover{
    color: #CDD6FB;
    opacity: 50%;
    font-size: 3em;
    transition: all 0.3s ease 0s;
    text-decoration:none;
}

/* Sponsor imgs Grow */
.hvr-grow {
    padding: 2%;
    display: inline-block;
    vertical-align: middle;
    transform: translateZ(0);
    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
    backface-visibility: hidden;
    -moz-osx-font-smoothing: grayscale;
    transition-duration: 0.3s;
    transition-property: transform;
}

.hvr-grow:hover,
.hvr-grow:focus,
.hvr-grow:active {
    transform: scale(1.1);
    opacity: 0.5;
}

@media (max-width: 768px){
    .blob {
        height: 70vh;
    }
    .past-events{
        position: relative;
        margin-top: -90%;
        margin-inline: 15%;
    }

    .burger-image{
        max-width: 90%;
        z-index:100;
        position: relative;
        left: 2em;
    }

    #projects .slick-slide{
        height: 400px;
    }
    .desktop, .phone{
        display: none;
    }
    .mobile{
        display: contents;
    }
    .wits{
        margin: 0 5%;
        z-index: 2;
        position: relative;
    }
    .wits-title{
        width: 45%;
    }
    .hall-of-fame-title{
        width: 90%;
        padding-left: 5%;
    }
    .ho-title{
        width: 75%;
    }
    .goal-title{
        width: 50%
    }
}
/* ... */

